Fixed scrollbar also on main page

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,6 @@ html
 
 div#main
 {
-    overflow-y: scroll;
     height: 600px;
     width: 800px;
     position: absolute;
@@ -102,6 +101,11 @@ div#top p#b
     right: 0;
     top: 0;
     z-index: 0;
+}
+
+div.memes
+{
+    overflow-y: scroll;
 }
 
 div#memes
